# MutilMeida

./: README.md
ffmpeg/MyApplication/: build.gradle
ffmpeg/MyApplication/app/: build.gradle
ffmpeg/MyApplication/app/src/androidTest/java/com/example/kass/: ExampleInstrumentedTest.java
ffmpeg/MyApplication/app/src/main/: AndroidManifest.xml
ffmpeg/MyApplication/app/src/main/cpp/: CMakeLists.txt  FFmpegPlayDemo.cpp  FFmpegPlayDemo.h  native-lib.cpp
ffmpeg/MyApplication/app/src/main/java/com/example/kass/: FFMpegVideoView.java  MainActivity.java
ffmpeg/MyApplication/app/src/main/java/com/example/kass/adapter/: ViewPagerFragmentApt.java
ffmpeg/MyApplication/app/src/main/java/com/example/kass/utils/: MessageEvent.java
ffmpeg/MyApplication/app/src/main/java/com/example/kass/view/: MainActivity.java
ffmpeg/MyApplication/app/src/main/java/com/example/kass/view/fragment/: AudioFragment.java  BaseFragment.java  IndexFragment.java  LiveFragment.java  VideoFragment.java
ffmpeg/MyApplication/app/src/main/res/drawable/: shape_corner.xml
ffmpeg/MyApplication/app/src/main/res/layout/: activity_main.xml  fragment_audio.xml  fragment_index.xml  fragment_live.xml  fragment_video.xml  include_navigation_bar.xml
ffmpeg/MyApplication/app/src/main/res/values/: colors.xml  strings.xml
ffmpeg/MyApplication/app/src/test/java/com/example/kass/: ExampleUnitTest.java
ffmpeg/MyApplication/gradle/wrapper/: gradle-wrapper.properties
